unpackaged/main/default/objects/Relev_des_chutes__c/Relev_des_chutes__c.object-meta.xml
<CustomObject>
    <label>Relevé des chutes</label>
    <nameField>
        <displayFormat>RC-{00000000}</displayFormat>
        <label>Nom de Relevé des chutes</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relevés des chutes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>