unpackaged/main/default/objects/Relev_des_chutes__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>TextArea</type>
</CustomField>