unpackaged/main/default/objects/Relev_des_chutes__c/fields/Date_de_la_chute__c.field-meta.xml
<CustomField>
    <fullName>Date_de_la_chute__c</fullName>
    <label>Date de la chute</label>
    <type>Date</type>
</CustomField>