unpackaged/main/default/objects/Relev_des_chutes__c/fields/Description_de_la_chute__c.field-meta.xml
<CustomField>
    <fullName>Description_de_la_chute__c</fullName>
    <label>Description de la chute</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>