unpackaged/main/default/objects/Relev_des_chutes__c/fields/Dossier_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Dossier_d_intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier d&apos;intervention</label>
    <referenceTo>Dossier_de_prise_en_charge__c</referenceTo>
    <relationshipLabel>Relevés des chutes</relationshipLabel>
    <relationshipName>Relev_s_des_chutes</relationshipName>
    <type>Lookup</type>
</CustomField>