unpackaged/main/default/objects/Relev_des_chutes__c/fields/Dossier_de_soins__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_soins__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier de soins</label>
    <referenceTo>Dossier_de_soins__c</referenceTo>
    <relationshipLabel>Relevés des chutes</relationshipLabel>
    <relationshipName>Relev_s_des_chutes</relationshipName>
    <type>Lookup</type>
</CustomField>