unpackaged/main/default/objects/Relev_des_chutes__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Relevés des chutes</relationshipLabel>
    <relationshipName>Relev_s_des_chutes</relationshipName>
    <type>Lookup</type>
</CustomField>